--- a/aplicativos_web/eadlivre/templates/default/inc/css.css
+++ b/aplicativos_web/eadlivre/templates/default/inc/css.css
@@ -29,20 +29,27 @@ body {
     line-height: 1.8;
 }
 
-a {
+a.default {
     font-weight: bold;
     color: green;
     padding: 3px;
     text-decoration: none;
     text-shadow: 1px 1px 2px #999;
 }
-a:hover {
+a.default:hover {
     color: #fff;
     background-color: green;
 }
+input {
+    padding: 8px;
+    font-size: 15px
+}
+label {
+    font-size: 11px;
+}
 
 #coluna_esq {
-    width: 200px;
+    width: 20%;
     height: 200px;
     float: left;
     border-right: dashed 1px #ccc;
@@ -61,7 +68,23 @@ a:hover {
 }
 
 #conteudo {
-    float: right;
+    width: 75%;
+    padding-left: 20px;
+    float: left;
+}
+#conteudo #boxLogin {
+    width: 300px;
+    margin-left: 150px;
+    left: -50%;
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
+#conteudo #boxLogin input {
+    width: 100%;
+}
+#conteudo h3 {
+    text-align: center;
+    font-size: 20px;
 }
 #rodape {
     text-align: center;
